--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.datasource.password=8305
 spring.datasource.username=gOFFa
-spring.datasource.url=spring.datasource.url=jdbc:mysql://localhost:3306/medenychi_voda
+spring.datasource.url=jdbc:mysql://localhost:3306/medenychi_voda
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.org.hibernate.SQL=debug
+
