Entities added SecurityConfiguration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.password=8305
-spring.datasource.username=gOFFa
+spring.datasource.password=123456789
+spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/medenychi_voda
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=debug
 
+spring.security.users.name=users
+spring.security.users.password=pass
