--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL=debug
 
+logging.level.org.springframework.security=DEBUG
+
