--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ logging.level.org.hibernate.SQL=debug
 
 logging.level.org.springframework.security=DEBUG
 
+
+spring.jpa.properties.hibernate.jdbc.time_zone=GMT+2
