Delete button for every package added. Alert notification after successfull order save added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=debug
 
 logging.level.org.springframework.security=DEBUG
-
+#logging.level.root=debug
 
 spring.jpa.properties.hibernate.jdbc.time_zone=GMT+2
